# snake_unibo

./: .gitignore  CMakeLists.txt  Makefile
src/: main.cpp
src/characters/: Snake.cpp  Snake.h
src/screens/: Game.cpp  Game.h  Interface.cpp  Interface.h  MainMenu.cpp  MainMenu.h
